--- a/task6.html
+++ b/task6.html
@@ -1,55 +1,151 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-        <title>Task-6</title>
-        <style>
-            body{
-                margin-left: 30%;
-                margin-right: 30%;
-                margin-top: 30px;
-            }
-            #x{
-                height: 40px;
-                padding: 10px;
-                border: 1px solid;
-                border-radius: 6px;
-            }
-        </style>
-    </head>
-    <body>
-        <div>
-            <form action="#" class="was-validated">
-                <label for="firstname" class="form-label">Name</label>
-                <div class="input-group has-validation">    
-                    <input type="text" name="firstname" class="form-control" id="input" required>
-                    <div class="invalid-feedback">
-                        Name is required
-                    </div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Overpass+Mono" rel="stylesheet">
+    <title>Document</title>
+    <style>
+        * {
+  margin: 0px;
+  padding: 0px;
+}
+
+body {
+  background-color: #eee;
+}
+
+#wrapper {
+  width: 500px;
+  height: 50%;
+  overflow: hidden;
+  border: 0px solid #000;
+  margin: 50px auto;
+  padding: 10px;
+}
+
+.main-content {
+  width: 250px;
+  height: 40%;
+  margin: 10px auto;
+  background-color: #fff;
+  border: 2px solid #e6e6e6;
+  padding: 40px 50px;
+}
+
+.header {
+  border: 0px solid #000;
+  margin-bottom: 5px;
+}
+
+.header img {
+  height: 50px;
+  width: 175px;
+  margin: auto;
+  position: relative;
+  left: 40px;
+}
+
+.input-1,
+.input-2 {
+  width: 100%;
+  margin-bottom: 5px;
+  padding: 8px 12px;
+  border: 1px solid #dbdbdb;
+  box-sizing: border-box;
+  border-radius: 3px;
+}
+
+.overlap-text {
+  position: relative;
+}
+
+.overlap-text a {
+  position: absolute;
+  top: 8px;
+  right: 10px;
+  color: #003569;
+  font-size: 14px;
+  text-decoration: none;
+  font-family: 'Overpass Mono', monospace;
+  letter-spacing: -1px;
+}
+
+.btn {
+  width: 100%;
+  background-color: #3897f0;
+  border: 1px solid #3897f0;
+  padding: 5px 12px;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 3px;
+}
+
+#checkbtn{
+    padding-left: 2px;
+    padding-right:14px;
+}
+.sub-content {
+  width: 250px;
+  height: 40%;
+  margin: 10px auto;
+  border: 1px solid #e6e6e6;
+  padding: 20px 50px;
+  background-color: #fff;
+}
+
+.s-part {
+  text-align: center;
+  font-family: 'Overpass Mono', monospace;
+  word-spacing: -3px;
+  letter-spacing: -2px;
+  font-weight: normal;
+}
+
+.s-part a {
+  text-decoration: none;
+  cursor: pointer;
+  color: #3897f0;
+  font-family: 'Overpass Mono', monospace;
+  word-spacing: -3px;
+  letter-spacing: -2px;
+  font-weight: normal;
+}
+
+input:focus {
+    background-color: yellow;
+}
+
+
+
+    </style>
+</head>
+
+<body>
+
+    <div id="wrapper">
+        <div class="main-content">
+            <div class="header">
+                <img src="https://i.imgur.com/zqpwkLQ.png" />
+            </div>
+            <div class="l-part">
+                <input type="text" placeholder="Username" class="input-1" /><br><br>
+                <div class="overlap-text">
+                    <input type="password" placeholder="Password" class="input-2" /><br><br>
                 </div>
-                <br>
-                <label for="email" class="form-label">Email</label>
-                <div class="input-group has-validation">    
-                    <input type="email" name="email" class="form-control" required>
-                    <div class="invalid-feedback">
-                        Email is required
-                    </div>
-                </div>
-                <br>
-                <label for="password" class="form-label">Password</label>
-                <div class="input-group has-validation">    
-                    <input type="password" name="password" class="form-control" required>
-                    <div class="invalid-feedback">
-                        Password is required
-                    </div>
-                </div>
-                <br>
-                <label for="hobbies" class="form-label">Hobbies</label>
-                <div class="input-group">
-                    <input type="number" name="hobbies" class="w-100" id="x" required>
-                </div>
-                <br>
-                <button type="submit" class="btn btn-danger w-100">Submit</button>  
-            </form>
+                <input type="button" value="Log in" class="btn" /><br><br>
+                <input type="checkbox"><span id="checkbtn">Remember me</span>
+                <a href="#">Forgot Password?</a>
+            </div>
         </div>
-    </body>
+        <div class="sub-content">
+            <div class="s-part">
+                Don't have an account?<a href="#">Sign up</a>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
